2009-07-29  Raja R Harinath  <harinath@hurrynot.org>

	* Dictionary.cs (Enumerator.current): New.
	(Enumerator.MoveNext): Update it.
	(Enumerator.Current): Don't verify any invariants.

2009-06-10  Marek Safar <marek.safar@gmail.com>

	* IEqualityComparer.cs, IComparer.cs, IEnumerable.cs,
	IEnumerator.cs: Add type variance.

2009-04-02  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs (ValueCollection.CopyTo): fix for copying to
	an object array. Based on a patch by Tobias Grimm <mono@e-tobi.net>.
	Fixes bug #328036.

2009-02-04  Zoltan Varga  <vargaz@gmail.com>

	* Dictionary.cs: Declare the Link struct outside the main class to avoid
	creating a separate inflated instances for each instantiation of Dictionary.

2008-11-14  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs (ICollection.CopyTo): fix the different possible
	copying cases depending on the actual type of destination array,
	be it an array of KeyValuePair, DictionaryEntry, or object.
	Fixes #444778.

2008-11-14  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs: fix ICollection<KeyValuePair<T>>.Remove and .Contains
	to not only check if the key exists but if the associated value is the
	good one as well. Fixes #444768.

2008-10-06  Zoltan Varga  <vargaz@gmail.com>

	* Dictionary.cs (Clear): Clear the linkSlots array as well, as 
	Enumerator.MoveNext () depends on it. Fixes #432441.

Fri Oct 3 23:08:06 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* Dictionary.cs: by popular demand, return keys/values in insertion
	order when possible.

2008-09-29  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs: check for null argument in ContainsKey.
	Patch by Jonathan Anderson  <jonathan.l.anderson@gmail.com>

2008-09-24  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs: properly reset all compounds enumerators.
	Fixes #429530.

2008-09-12  Jb Evain  <jbevain@novell.com>

	* Dictionary.cs: (ToTValue) allow null values to be added for non
	value types TValues to the dictionary when using the